Added store metadata file/utils

--- a/src/semantic_search/dev/benchmarking_dev.ipynb
+++ b/src/semantic_search/dev/benchmarking_dev.ipynb
@@ -30,7 +30,7 @@
     "model = LocalEmbeddingModel(chunk_size=256)\n",
     "ds = FAISSDocumentStore(model, db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/references-2')\n",
     "\n",
-    "assert ds.load_index()"
+    "assert ds.load_store()"
    ]
   },
   {
