--- a/src/semantic_search/dev/embeddings.ipynb
+++ b/src/semantic_search/dev/embeddings.ipynb
@@ -2,15 +2,113 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b059328c7cb948838f6f81caf6753f7c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/453 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a652a4f480e4d2e8be68557c4347dd3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/228k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0be659619cd844ea9edccbcb7f5093e1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/717k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f1024af448e44818f8becec8d6c8040",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/125 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9bd93ac4ab7642939be7e3440cd7c407",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/754 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4299bc9056c74365b8613d000cf0ceff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "pytorch_model.bin:   0%|          | 0.00/440M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Using device: cpu\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fc6212578eec4621908475479a269a3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/440M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -20,7 +118,7 @@
     "from semantic_search.store import LocalEmbeddingModel\n",
     "\n",
     "model = LocalEmbeddingModel(\n",
-    "    model_name='prdev/mini-gte',  # 'sentence-transformers/all-MiniLM-L6-v2',\n",
+    "    model_name='allenai/specter2_base',  # 'sentence-transformers/all-MiniLM-L6-v2',\n",
     "    chunk_size=512,\n",
     "    chunk_overlap=64,\n",
     "    batch_size=8\n",
@@ -29,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Chunking and encoding: 100%|██████████| 4/4 [00:00<00:00, 670.26it/s]\n"
+      "Chunking and encoding: 100%|██████████| 4/4 [00:00<00:00, 585.61it/s]\n"
      ]
     },
     {
@@ -50,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating embeddings: 100%|██████████| 1/1 [00:01<00:00,  1.37s/it]\n"
+      "Generating embeddings: 100%|██████████| 1/1 [00:02<00:00,  2.76s/it]\n"
      ]
     }
    ],
@@ -188,6 +286,262 @@
    ],
    "source": [
     "emb[0] == sentence_embeddings[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dev for new cleaner store setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload\n",
+    "from semantic_search import store\n",
+    "reload(store)\n",
+    "from semantic_search.store import LocalEmbeddingModel, FAISSDocumentStore\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n",
+      "Loaded index with 1016 vectors\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds = FAISSDocumentStore(db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/allenai_specter2_base_test1')\n",
+    "assert ds.load_store()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>doi</th>\n",
+       "      <th>ref_via</th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>type</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>domain</th>\n",
+       "      <th>field</th>\n",
+       "      <th>subfield</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>W2194775991</td>\n",
+       "      <td>10.1109/cvpr.2016.90</td>\n",
+       "      <td>openalex_id</td>\n",
+       "      <td>Deep Residual Learning for Image Recognition</td>\n",
+       "      <td>Deeper neural networks are more difficult to t...</td>\n",
+       "      <td>article</td>\n",
+       "      <td>Advanced Neural Network Applications</td>\n",
+       "      <td>Physical Sciences</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Computer Vision and Pattern Recognition</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>W1686810756</td>\n",
+       "      <td>None</td>\n",
+       "      <td>openalex_id</td>\n",
+       "      <td>Very Deep Convolutional Networks for Large-Sca...</td>\n",
+       "      <td>In this work we investigate the effect of the ...</td>\n",
+       "      <td>article</td>\n",
+       "      <td>Advanced Vision and Imaging</td>\n",
+       "      <td>Physical Sciences</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Computer Vision and Pattern Recognition</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>W4385245566</td>\n",
+       "      <td>10.48550/arxiv.1706.03762</td>\n",
+       "      <td>openalex_id</td>\n",
+       "      <td>Attention Is All You Need</td>\n",
+       "      <td>The dominant sequence transduction models are ...</td>\n",
+       "      <td>preprint</td>\n",
+       "      <td>Natural Language Processing Techniques</td>\n",
+       "      <td>Physical Sciences</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Artificial Intelligence</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>W2108598243</td>\n",
+       "      <td>10.1109/cvpr.2009.5206848</td>\n",
+       "      <td>openalex_id</td>\n",
+       "      <td>ImageNet: A large-scale hierarchical image dat...</td>\n",
+       "      <td>The explosion of image data on the Internet ha...</td>\n",
+       "      <td>article</td>\n",
+       "      <td>Advanced Image and Video Retrieval Techniques</td>\n",
+       "      <td>Physical Sciences</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Computer Vision and Pattern Recognition</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>W2133665775</td>\n",
+       "      <td>10.1109/tip.2003.819861</td>\n",
+       "      <td>openalex_id</td>\n",
+       "      <td>Image Quality Assessment: From Error Visibilit...</td>\n",
+       "      <td>Objective methods for assessing perceptual ima...</td>\n",
+       "      <td>article</td>\n",
+       "      <td>Image and Video Quality Assessment</td>\n",
+       "      <td>Physical Sciences</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Computer Vision and Pattern Recognition</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id                        doi      ref_via  \\\n",
+       "0  W2194775991       10.1109/cvpr.2016.90  openalex_id   \n",
+       "1  W1686810756                       None  openalex_id   \n",
+       "2  W4385245566  10.48550/arxiv.1706.03762  openalex_id   \n",
+       "3  W2108598243  10.1109/cvpr.2009.5206848  openalex_id   \n",
+       "4  W2133665775    10.1109/tip.2003.819861  openalex_id   \n",
+       "\n",
+       "                                               title  \\\n",
+       "0       Deep Residual Learning for Image Recognition   \n",
+       "1  Very Deep Convolutional Networks for Large-Sca...   \n",
+       "2                          Attention Is All You Need   \n",
+       "3  ImageNet: A large-scale hierarchical image dat...   \n",
+       "4  Image Quality Assessment: From Error Visibilit...   \n",
+       "\n",
+       "                                                text      type  \\\n",
+       "0  Deeper neural networks are more difficult to t...   article   \n",
+       "1  In this work we investigate the effect of the ...   article   \n",
+       "2  The dominant sequence transduction models are ...  preprint   \n",
+       "3  The explosion of image data on the Internet ha...   article   \n",
+       "4  Objective methods for assessing perceptual ima...   article   \n",
+       "\n",
+       "                                           topic             domain  \\\n",
+       "0           Advanced Neural Network Applications  Physical Sciences   \n",
+       "1                    Advanced Vision and Imaging  Physical Sciences   \n",
+       "2         Natural Language Processing Techniques  Physical Sciences   \n",
+       "3  Advanced Image and Video Retrieval Techniques  Physical Sciences   \n",
+       "4             Image and Video Quality Assessment  Physical Sciences   \n",
+       "\n",
+       "              field                                 subfield  \n",
+       "0  Computer Science  Computer Vision and Pattern Recognition  \n",
+       "1  Computer Science  Computer Vision and Pattern Recognition  \n",
+       "2  Computer Science                  Artificial Intelligence  \n",
+       "3  Computer Science  Computer Vision and Pattern Recognition  \n",
+       "4  Computer Science  Computer Vision and Pattern Recognition  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.document_store.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chunk_id</th>\n",
+       "      <th>doc_id</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>W2194775991</td>\n",
+       "      <td>deeper neural networks are more difficult to t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>W1686810756</td>\n",
+       "      <td>in this work we investigate the effect of the ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   chunk_id       doc_id                                               text\n",
+       "0         0  W2194775991  deeper neural networks are more difficult to t...\n",
+       "1         1  W1686810756  in this work we investigate the effect of the ..."
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.chunk_store.head(2)"
    ]
   },
   {
