Added store save options; Adapted store search

--- a/src/semantic_search/dev/embeddings.ipynb
+++ b/src/semantic_search/dev/embeddings.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -318,172 +318,104 @@
      "output_type": "stream",
      "text": [
       "Using device: cpu\n",
-      "Loaded index with 1016 vectors\n"
+      "Loaded index with 103 vectors\n"
      ]
     }
    ],
    "source": [
-    "ds = FAISSDocumentStore(db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/allenai_specter2_base_test1')\n",
+    "ds = FAISSDocumentStore(db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/allenai_specter2_base_test2')\n",
     "assert ds.load_store()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>doi</th>\n",
-       "      <th>ref_via</th>\n",
-       "      <th>title</th>\n",
-       "      <th>text</th>\n",
-       "      <th>type</th>\n",
-       "      <th>topic</th>\n",
-       "      <th>domain</th>\n",
-       "      <th>field</th>\n",
-       "      <th>subfield</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>W2194775991</td>\n",
-       "      <td>10.1109/cvpr.2016.90</td>\n",
-       "      <td>openalex_id</td>\n",
-       "      <td>Deep Residual Learning for Image Recognition</td>\n",
-       "      <td>Deeper neural networks are more difficult to t...</td>\n",
-       "      <td>article</td>\n",
-       "      <td>Advanced Neural Network Applications</td>\n",
-       "      <td>Physical Sciences</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Computer Vision and Pattern Recognition</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>W1686810756</td>\n",
-       "      <td>None</td>\n",
-       "      <td>openalex_id</td>\n",
-       "      <td>Very Deep Convolutional Networks for Large-Sca...</td>\n",
-       "      <td>In this work we investigate the effect of the ...</td>\n",
-       "      <td>article</td>\n",
-       "      <td>Advanced Vision and Imaging</td>\n",
-       "      <td>Physical Sciences</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Computer Vision and Pattern Recognition</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>W4385245566</td>\n",
-       "      <td>10.48550/arxiv.1706.03762</td>\n",
-       "      <td>openalex_id</td>\n",
-       "      <td>Attention Is All You Need</td>\n",
-       "      <td>The dominant sequence transduction models are ...</td>\n",
-       "      <td>preprint</td>\n",
-       "      <td>Natural Language Processing Techniques</td>\n",
-       "      <td>Physical Sciences</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Artificial Intelligence</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>W2108598243</td>\n",
-       "      <td>10.1109/cvpr.2009.5206848</td>\n",
-       "      <td>openalex_id</td>\n",
-       "      <td>ImageNet: A large-scale hierarchical image dat...</td>\n",
-       "      <td>The explosion of image data on the Internet ha...</td>\n",
-       "      <td>article</td>\n",
-       "      <td>Advanced Image and Video Retrieval Techniques</td>\n",
-       "      <td>Physical Sciences</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Computer Vision and Pattern Recognition</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>W2133665775</td>\n",
-       "      <td>10.1109/tip.2003.819861</td>\n",
-       "      <td>openalex_id</td>\n",
-       "      <td>Image Quality Assessment: From Error Visibilit...</td>\n",
-       "      <td>Objective methods for assessing perceptual ima...</td>\n",
-       "      <td>article</td>\n",
-       "      <td>Image and Video Quality Assessment</td>\n",
-       "      <td>Physical Sciences</td>\n",
-       "      <td>Computer Science</td>\n",
-       "      <td>Computer Vision and Pattern Recognition</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            id                        doi      ref_via  \\\n",
-       "0  W2194775991       10.1109/cvpr.2016.90  openalex_id   \n",
-       "1  W1686810756                       None  openalex_id   \n",
-       "2  W4385245566  10.48550/arxiv.1706.03762  openalex_id   \n",
-       "3  W2108598243  10.1109/cvpr.2009.5206848  openalex_id   \n",
-       "4  W2133665775    10.1109/tip.2003.819861  openalex_id   \n",
-       "\n",
-       "                                               title  \\\n",
-       "0       Deep Residual Learning for Image Recognition   \n",
-       "1  Very Deep Convolutional Networks for Large-Sca...   \n",
-       "2                          Attention Is All You Need   \n",
-       "3  ImageNet: A large-scale hierarchical image dat...   \n",
-       "4  Image Quality Assessment: From Error Visibilit...   \n",
-       "\n",
-       "                                                text      type  \\\n",
-       "0  Deeper neural networks are more difficult to t...   article   \n",
-       "1  In this work we investigate the effect of the ...   article   \n",
-       "2  The dominant sequence transduction models are ...  preprint   \n",
-       "3  The explosion of image data on the Internet ha...   article   \n",
-       "4  Objective methods for assessing perceptual ima...   article   \n",
-       "\n",
-       "                                           topic             domain  \\\n",
-       "0           Advanced Neural Network Applications  Physical Sciences   \n",
-       "1                    Advanced Vision and Imaging  Physical Sciences   \n",
-       "2         Natural Language Processing Techniques  Physical Sciences   \n",
-       "3  Advanced Image and Video Retrieval Techniques  Physical Sciences   \n",
-       "4             Image and Video Quality Assessment  Physical Sciences   \n",
-       "\n",
-       "              field                                 subfield  \n",
-       "0  Computer Science  Computer Vision and Pattern Recognition  \n",
-       "1  Computer Science  Computer Vision and Pattern Recognition  \n",
-       "2  Computer Science                  Artificial Intelligence  \n",
-       "3  Computer Science  Computer Vision and Pattern Recognition  \n",
-       "4  Computer Science  Computer Vision and Pattern Recognition  "
+       "[{'rank': 1,\n",
+       "  'score': 0.532930805335529,\n",
+       "  'doc_id': 'W2772709170',\n",
+       "  'doi': '10.48550/arxiv.1712.01815',\n",
+       "  'topic': 'Artificial Intelligence in Games'},\n",
+       " {'rank': 2,\n",
+       "  'score': 0.5323105859180169,\n",
+       "  'doc_id': 'W4310561607',\n",
+       "  'doi': '10.48550/arxiv.2211.17111',\n",
+       "  'topic': 'Parallel Computing and Optimization Techniques'},\n",
+       " {'rank': 3,\n",
+       "  'score': 0.5287573212579326,\n",
+       "  'doc_id': 'W2222512263',\n",
+       "  'doi': '10.1002/nav.3800020109',\n",
+       "  'topic': 'Optimization and Mathematical Programming'},\n",
+       " {'rank': 4,\n",
+       "  'score': 0.526998484957759,\n",
+       "  'doc_id': 'W2755088640',\n",
+       "  'doi': 'nan',\n",
+       "  'topic': 'Complex Network Analysis Techniques'},\n",
+       " {'rank': 5,\n",
+       "  'score': 0.5267845637437224,\n",
+       "  'doc_id': 'W2158131535',\n",
+       "  'doi': 'nan',\n",
+       "  'topic': 'Machine Learning and Algorithms'},\n",
+       " {'rank': 6,\n",
+       "  'score': 0.5267383869762133,\n",
+       "  'doc_id': 'W2151554678',\n",
+       "  'doi': '10.1109/4235.585893',\n",
+       "  'topic': 'Metaheuristic Optimization Algorithms Research'},\n",
+       " {'rank': 7,\n",
+       "  'score': 0.5255418443014074,\n",
+       "  'doc_id': 'W2964081807',\n",
+       "  'doi': '10.1109/cvpr.2018.00907',\n",
+       "  'topic': 'Advanced Neural Network Applications'},\n",
+       " {'rank': 8,\n",
+       "  'score': 0.5223727041560647,\n",
+       "  'doc_id': 'W4396941548',\n",
+       "  'doi': '10.1109/lra.2024.3401172',\n",
+       "  'topic': 'Video Surveillance and Tracking Methods'},\n",
+       " {'rank': 9,\n",
+       "  'score': 0.5186939505797413,\n",
+       "  'doc_id': 'W2913668833',\n",
+       "  'doi': 'nan',\n",
+       "  'topic': 'Machine Learning and Data Classification'},\n",
+       " {'rank': 10,\n",
+       "  'score': 0.5169324550185663,\n",
+       "  'doc_id': 'W2913668833',\n",
+       "  'doi': 'nan',\n",
+       "  'topic': 'Machine Learning and Data Classification'}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds.document_store.head(5)"
+    "ds.search('What is the main idea of the paper?', top_k=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "a = {\n",
+    "    'chunk_id': ds.chunk_store['chunk_id'].tolist(),\n",
+    "    'doc_id': ds.chunk_store['doc_id'].tolist(),\n",
+    "    'text': ds.chunk_store['text'].tolist(),\n",
+    "}\n",
+    "\n",
+    "chunk_store = pd.DataFrame(a).astype({'chunk_id': 'int64'}).set_index('chunk_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -507,49 +439,102 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>chunk_id</th>\n",
        "      <th>doc_id</th>\n",
        "      <th>text</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chunk_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>W2194775991</td>\n",
        "      <td>deeper neural networks are more difficult to t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>W1686810756</td>\n",
        "      <td>in this work we investigate the effect of the ...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>W4385245566</td>\n",
+       "      <td>the dominant sequence transduction models are ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>W2108598243</td>\n",
+       "      <td>the explosion of image data on the internet ha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>W2133665775</td>\n",
+       "      <td>objective methods for assessing perceptual ima...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1011</th>\n",
+       "      <td>W2013439747</td>\n",
+       "      <td>this paper discusses the experimental setup of...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1012</th>\n",
+       "      <td>W3158642773</td>\n",
+       "      <td>abstract despite the rapid development and pro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1013</th>\n",
+       "      <td>W3005695990</td>\n",
+       "      <td>density estimation aims to predict the spatial...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1014</th>\n",
+       "      <td>W1564360503</td>\n",
+       "      <td>lately, new methods for the acquisition of tim...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1015</th>\n",
+       "      <td>W4389574997</td>\n",
+       "      <td>we propose the first visible - light tomograph...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1016 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   chunk_id       doc_id                                               text\n",
-       "0         0  W2194775991  deeper neural networks are more difficult to t...\n",
-       "1         1  W1686810756  in this work we investigate the effect of the ..."
+       "               doc_id                                               text\n",
+       "chunk_id                                                                \n",
+       "0         W2194775991  deeper neural networks are more difficult to t...\n",
+       "1         W1686810756  in this work we investigate the effect of the ...\n",
+       "2         W4385245566  the dominant sequence transduction models are ...\n",
+       "3         W2108598243  the explosion of image data on the internet ha...\n",
+       "4         W2133665775  objective methods for assessing perceptual ima...\n",
+       "...               ...                                                ...\n",
+       "1011      W2013439747  this paper discusses the experimental setup of...\n",
+       "1012      W3158642773  abstract despite the rapid development and pro...\n",
+       "1013      W3005695990  density estimation aims to predict the spatial...\n",
+       "1014      W1564360503  lately, new methods for the acquisition of tim...\n",
+       "1015      W4389574997  we propose the first visible - light tomograph...\n",
+       "\n",
+       "[1016 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds.chunk_store.head(2)"
+    "chunk_store"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
