Misc smaller benchmarking fixed

--- a/src/semantic_search/dev/benchmarking_dev.ipynb
+++ b/src/semantic_search/dev/benchmarking_dev.ipynb
@@ -45,21 +45,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "200"
+       "prec_preflvl44    0.050000\n",
+       "rec_preflvl44     0.222551\n",
+       "f1_preflvl44      0.079951\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "model_name = 'sentence-transformers_all-MiniLM-L6-v2'\n",
+    "df = pd.read_csv(f'/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/benchmark_results/results_{model_name}.csv')\n",
+    "df.mean(axis=0).iloc[-3:]"
+   ]
   },
   {
    "cell_type": "code",
