Fix: preferred_index_metric bug in benchmarking pipeline

--- a/src/semantic_search/dev/benchmarking_dev.ipynb
+++ b/src/semantic_search/dev/benchmarking_dev.ipynb
@@ -154,6 +154,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Trying open source baselines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Visualize latent space"
    ]
   },
