Initial BM25 implementation for store (untested/finished)

--- a/src/semantic_search/dev/embeddings.ipynb
+++ b/src/semantic_search/dev/embeddings.ipynb
@@ -397,144 +397,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "a = {\n",
-    "    'chunk_id': ds.chunk_store['chunk_id'].tolist(),\n",
-    "    'doc_id': ds.chunk_store['doc_id'].tolist(),\n",
-    "    'text': ds.chunk_store['text'].tolist(),\n",
-    "}\n",
-    "\n",
-    "chunk_store = pd.DataFrame(a).astype({'chunk_id': 'int64'}).set_index('chunk_id')"
+    "## Dev for new hybrid search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>doc_id</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>chunk_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>W2194775991</td>\n",
-       "      <td>deeper neural networks are more difficult to t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>W1686810756</td>\n",
-       "      <td>in this work we investigate the effect of the ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>W4385245566</td>\n",
-       "      <td>the dominant sequence transduction models are ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>W2108598243</td>\n",
-       "      <td>the explosion of image data on the internet ha...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>W2133665775</td>\n",
-       "      <td>objective methods for assessing perceptual ima...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1011</th>\n",
-       "      <td>W2013439747</td>\n",
-       "      <td>this paper discusses the experimental setup of...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1012</th>\n",
-       "      <td>W3158642773</td>\n",
-       "      <td>abstract despite the rapid development and pro...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1013</th>\n",
-       "      <td>W3005695990</td>\n",
-       "      <td>density estimation aims to predict the spatial...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1014</th>\n",
-       "      <td>W1564360503</td>\n",
-       "      <td>lately, new methods for the acquisition of tim...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1015</th>\n",
-       "      <td>W4389574997</td>\n",
-       "      <td>we propose the first visible - light tomograph...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1016 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               doc_id                                               text\n",
-       "chunk_id                                                                \n",
-       "0         W2194775991  deeper neural networks are more difficult to t...\n",
-       "1         W1686810756  in this work we investigate the effect of the ...\n",
-       "2         W4385245566  the dominant sequence transduction models are ...\n",
-       "3         W2108598243  the explosion of image data on the internet ha...\n",
-       "4         W2133665775  objective methods for assessing perceptual ima...\n",
-       "...               ...                                                ...\n",
-       "1011      W2013439747  this paper discusses the experimental setup of...\n",
-       "1012      W3158642773  abstract despite the rapid development and pro...\n",
-       "1013      W3005695990  density estimation aims to predict the spatial...\n",
-       "1014      W1564360503  lately, new methods for the acquisition of tim...\n",
-       "1015      W4389574997  we propose the first visible - light tomograph...\n",
-       "\n",
-       "[1016 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chunk_store"
+    "from semantic_search.store.store import FAISSDocumentStore\n",
+    "\n",
+    "ds = FAISSDocumentStore(db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/main')\n",
+    "assert ds.load_store()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup_bm25(self):\n",
+    "    \"\"\"\n",
+    "    Set up BM25 for keyword search.\n",
+    "    Tokenizes all documents in the chunk store and initializes the BM25 model.\n",
+    "    \"\"\"\n",
+    "    from rank_bm25 import BM25Okapi\n",
+    "    \n",
+    "    if self.chunk_store is None:\n",
+    "        if not self.load_store():\n",
+    "            raise ValueError(\"Document store not created or loaded\")\n",
+    "    \n",
+    "    # Extract text from chunk store and tokenize\n",
+    "    texts = self.chunk_store['text'].tolist()\n",
+    "    self.tokenized_corpus = [doc.split() for doc in texts]\n",
+    "    \n",
+    "    # Initialize BM25 model\n",
+    "    self.bm25 = BM25Okapi(self.tokenized_corpus)\n",
+    "    print(f\"BM25 initialized with {len(self.tokenized_corpus)} documents\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
