--- a/src/semantic_search/dev/embeddings.ipynb
+++ b/src/semantic_search/dev/embeddings.ipynb
@@ -118,7 +118,7 @@
     "from semantic_search.store import LocalEmbeddingModel\n",
     "\n",
     "model = LocalEmbeddingModel(\n",
-    "    model_name='allenai/specter2_base',  # 'sentence-transformers/all-MiniLM-L6-v2',\n",
+    "    model_name='sentence-transformers/all-MiniLM-L6-v2',  # 'sentence-transformers/all-MiniLM-L6-v2',\n",
     "    chunk_size=512,\n",
     "    chunk_overlap=64,\n",
     "    batch_size=8\n",
@@ -310,84 +310,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-12 22:20:02.927660: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-05-12 22:20:04.794705: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n",
+      "Loaded index with 41220 vectors\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds = FAISSDocumentStore(db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/hybrid-dev')\n",
+    "assert ds.load_store()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>doc_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chunk_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>W2194775991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>W2194775991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>W1686810756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>W4385245566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>W4385245566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41215</th>\n",
+       "      <td>W4317940424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41216</th>\n",
+       "      <td>W4386977288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41217</th>\n",
+       "      <td>W4387995378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41218</th>\n",
+       "      <td>W4394656229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41219</th>\n",
+       "      <td>W4292423008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>41220 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               doc_id\n",
+       "chunk_id             \n",
+       "0         W2194775991\n",
+       "1         W2194775991\n",
+       "2         W1686810756\n",
+       "3         W4385245566\n",
+       "4         W4385245566\n",
+       "...               ...\n",
+       "41215     W4317940424\n",
+       "41216     W4386977288\n",
+       "41217     W4387995378\n",
+       "41218     W4394656229\n",
+       "41219     W4292423008\n",
+       "\n",
+       "[41220 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.chunk_store[list(set(['doc_id']))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: cpu\n",
-      "Loaded index with 103 vectors\n"
+      "Warning: Chunk ID W3197456663 not found in chunk_store.\n",
+      "Warning: Chunk ID W3003791552 not found in chunk_store.\n",
+      "Warning: Chunk ID W4221145940 not found in chunk_store.\n",
+      "Warning: Chunk ID W4387490658 not found in chunk_store.\n",
+      "Warning: Chunk ID W2994818707 not found in chunk_store.\n",
+      "Warning: Chunk ID W4385573874 not found in chunk_store.\n",
+      "Warning: Chunk ID W3133542152 not found in chunk_store.\n",
+      "Warning: Chunk ID W4237823019 not found in chunk_store.\n",
+      "Warning: Chunk ID W4214518393 not found in chunk_store.\n",
+      "Warning: Chunk ID W1530404542 not found in chunk_store.\n"
      ]
-    }
-   ],
-   "source": [
-    "ds = FAISSDocumentStore(db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/allenai_specter2_base_test2')\n",
-    "assert ds.load_store()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "[{'rank': 1,\n",
-       "  'score': 0.532930805335529,\n",
-       "  'doc_id': 'W2772709170',\n",
-       "  'doi': '10.48550/arxiv.1712.01815',\n",
-       "  'topic': 'Artificial Intelligence in Games'},\n",
-       " {'rank': 2,\n",
-       "  'score': 0.5323105859180169,\n",
-       "  'doc_id': 'W4310561607',\n",
-       "  'doi': '10.48550/arxiv.2211.17111',\n",
-       "  'topic': 'Parallel Computing and Optimization Techniques'},\n",
-       " {'rank': 3,\n",
-       "  'score': 0.5287573212579326,\n",
-       "  'doc_id': 'W2222512263',\n",
-       "  'doi': '10.1002/nav.3800020109',\n",
-       "  'topic': 'Optimization and Mathematical Programming'},\n",
-       " {'rank': 4,\n",
-       "  'score': 0.526998484957759,\n",
-       "  'doc_id': 'W2755088640',\n",
-       "  'doi': 'nan',\n",
-       "  'topic': 'Complex Network Analysis Techniques'},\n",
-       " {'rank': 5,\n",
-       "  'score': 0.5267845637437224,\n",
-       "  'doc_id': 'W2158131535',\n",
-       "  'doi': 'nan',\n",
-       "  'topic': 'Machine Learning and Algorithms'},\n",
-       " {'rank': 6,\n",
-       "  'score': 0.5267383869762133,\n",
-       "  'doc_id': 'W2151554678',\n",
-       "  'doi': '10.1109/4235.585893',\n",
-       "  'topic': 'Metaheuristic Optimization Algorithms Research'},\n",
-       " {'rank': 7,\n",
-       "  'score': 0.5255418443014074,\n",
-       "  'doc_id': 'W2964081807',\n",
-       "  'doi': '10.1109/cvpr.2018.00907',\n",
-       "  'topic': 'Advanced Neural Network Applications'},\n",
-       " {'rank': 8,\n",
-       "  'score': 0.5223727041560647,\n",
-       "  'doc_id': 'W4396941548',\n",
-       "  'doi': '10.1109/lra.2024.3401172',\n",
-       "  'topic': 'Video Surveillance and Tracking Methods'},\n",
-       " {'rank': 9,\n",
-       "  'score': 0.5186939505797413,\n",
-       "  'doc_id': 'W2913668833',\n",
-       "  'doi': 'nan',\n",
-       "  'topic': 'Machine Learning and Data Classification'},\n",
-       " {'rank': 10,\n",
-       "  'score': 0.5169324550185663,\n",
-       "  'doc_id': 'W2913668833',\n",
-       "  'doi': 'nan',\n",
-       "  'topic': 'Machine Learning and Data Classification'}]"
+       "[]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,48 +491,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/cluster/home/lcarretero/python_envs/dsl-research-assistant/lib/python3.11/site-packages/torch/utils/_pytree.py:185: FutureWarning: optree is installed but the version is too old to support PyTorch Dynamo in C++ pytree. C++ pytree support is disabled. Please consider upgrading optree using `python3 -m pip install --upgrade 'optree>=0.13.0'`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'store_raw_documents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msemantic_search\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstore\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m FAISSDocumentStore\n\u001b[32m      3\u001b[39m ds = FAISSDocumentStore(db_dir=\u001b[33m'\u001b[39m\u001b[33m/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/sentence-transformers_all-MiniLM-L6-v2\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[43mds\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_store\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/workspace/dsl/dsl-research-assistant/src/semantic_search/store/store.py:206\u001b[39m, in \u001b[36mFAISSDocumentStore.load_store\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    204\u001b[39m \u001b[38;5;28mself\u001b[39m.index_metric = metadata[\u001b[33m'\u001b[39m\u001b[33mstore\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mindex_metric\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m    205\u001b[39m \u001b[38;5;28mself\u001b[39m.store_raw_embeddings = metadata[\u001b[33m'\u001b[39m\u001b[33mstore\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mstore_raw_embeddings\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m--> \u001b[39m\u001b[32m206\u001b[39m \u001b[38;5;28mself\u001b[39m.store_raw_documents = \u001b[43mmetadata\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mstore\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mstore_raw_documents\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m    207\u001b[39m \u001b[38;5;28mself\u001b[39m.chunk_store_columns = metadata[\u001b[33m'\u001b[39m\u001b[33mstore\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mchunk_store_columns\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m    208\u001b[39m \u001b[38;5;28mself\u001b[39m.use_bm25 = metadata[\u001b[33m'\u001b[39m\u001b[33mstore\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33muse_bm25\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mKeyError\u001b[39m: 'store_raw_documents'"
+     ]
+    }
+   ],
    "source": [
     "from semantic_search.store.store import FAISSDocumentStore\n",
     "\n",
-    "ds = FAISSDocumentStore(db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/main')\n",
+    "ds = FAISSDocumentStore(db_dir='/cluster/home/lcarretero/workspace/dsl/dsl-research-assistant/db/sentence-transformers_all-MiniLM-L6-v2')\n",
     "assert ds.load_store()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'rank': 1,\n",
+       "  'score': 0.55700177,\n",
+       "  'doc_id': 'W3173515979',\n",
+       "  'doi': '10.1109/cvprw53098.2021.00286',\n",
+       "  'topic': 'Advanced Image Processing Techniques'},\n",
+       " {'rank': 2,\n",
+       "  'score': 0.5426627,\n",
+       "  'doc_id': 'W3024079478',\n",
+       "  'doi': '10.1109/wacv45572.2020.9093474',\n",
+       "  'topic': 'Face recognition and analysis'},\n",
+       " {'rank': 3,\n",
+       "  'score': 0.53668606,\n",
+       "  'doc_id': 'W3178812510',\n",
+       "  'doi': '10.1109/icicsp55539.2022.10050624',\n",
+       "  'topic': 'Advanced Neural Network Applications'},\n",
+       " {'rank': 4,\n",
+       "  'score': 0.4742528,\n",
+       "  'doc_id': 'W4386066489',\n",
+       "  'doi': '10.1109/cvpr52729.2023.01670',\n",
+       "  'topic': 'Robotics and Sensor-Based Localization'},\n",
+       " {'rank': 5,\n",
+       "  'score': 0.46302596,\n",
+       "  'doc_id': 'W3085567564',\n",
+       "  'doi': '10.1109/jsen.2020.3023486',\n",
+       "  'topic': 'Non-Invasive Vital Sign Monitoring'},\n",
+       " {'rank': 6,\n",
+       "  'score': 0.46051693,\n",
+       "  'doc_id': 'W2766042539',\n",
+       "  'doi': '10.1145/3123266.3123451',\n",
+       "  'topic': 'Anomaly Detection Techniques and Applications'},\n",
+       " {'rank': 7,\n",
+       "  'score': 0.45910347,\n",
+       "  'doc_id': 'W2740982616',\n",
+       "  'doi': '10.1109/cvpr.2017.186',\n",
+       "  'topic': 'Image Enhancement Techniques'},\n",
+       " {'rank': 8,\n",
+       "  'score': 0.45882607,\n",
+       "  'doc_id': 'W284229479',\n",
+       "  'doi': '10.1093/oso/9780195148558.001.0001',\n",
+       "  'topic': 'Environmental, Ecological, and Cultural Studies'},\n",
+       " {'rank': 9,\n",
+       "  'score': 0.4585931,\n",
+       "  'doc_id': 'W2573048268',\n",
+       "  'doi': '10.1112/blms/28.5.544',\n",
+       "  'topic': 'Digital Image Processing Techniques'},\n",
+       " {'rank': 10,\n",
+       "  'score': 0.4530817,\n",
+       "  'doc_id': 'W3183673520',\n",
+       "  'doi': '10.1109/cvpr46437.2021.00551',\n",
+       "  'topic': 'Visual Attention and Saliency Detection'}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def setup_bm25(self):\n",
-    "    \"\"\"\n",
-    "    Set up BM25 for keyword search.\n",
-    "    Tokenizes all documents in the chunk store and initializes the BM25 model.\n",
-    "    \"\"\"\n",
-    "    from rank_bm25 import BM25Okapi\n",
-    "    \n",
-    "    if self.chunk_store is None:\n",
-    "        if not self.load_store():\n",
-    "            raise ValueError(\"Document store not created or loaded\")\n",
-    "    \n",
-    "    # Extract text from chunk store and tokenize\n",
-    "    texts = self.chunk_store['text'].tolist()\n",
-    "    self.tokenized_corpus = [doc.split() for doc in texts]\n",
-    "    \n",
-    "    # Initialize BM25 model\n",
-    "    self.bm25 = BM25Okapi(self.tokenized_corpus)\n",
-    "    print(f\"BM25 initialized with {len(self.tokenized_corpus)} documents\")"
+    "ds.search('What is the main idea of the paper?', top_k=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>doc_id</th>\n",
+       "      <th>doi</th>\n",
+       "      <th>topic</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chunk_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>W2194775991</td>\n",
+       "      <td>10.1109/cvpr.2016.90</td>\n",
+       "      <td>Advanced Neural Network Applications</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>W2194775991</td>\n",
+       "      <td>10.1109/cvpr.2016.90</td>\n",
+       "      <td>Advanced Neural Network Applications</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>W1686810756</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Advanced Vision and Imaging</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>W4385245566</td>\n",
+       "      <td>10.48550/arxiv.1706.03762</td>\n",
+       "      <td>Natural Language Processing Techniques</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>W4385245566</td>\n",
+       "      <td>10.48550/arxiv.1706.03762</td>\n",
+       "      <td>Natural Language Processing Techniques</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               doc_id                        doi  \\\n",
+       "chunk_id                                           \n",
+       "0         W2194775991       10.1109/cvpr.2016.90   \n",
+       "1         W2194775991       10.1109/cvpr.2016.90   \n",
+       "2         W1686810756                        nan   \n",
+       "3         W4385245566  10.48550/arxiv.1706.03762   \n",
+       "4         W4385245566  10.48550/arxiv.1706.03762   \n",
+       "\n",
+       "                                           topic  \n",
+       "chunk_id                                          \n",
+       "0           Advanced Neural Network Applications  \n",
+       "1           Advanced Neural Network Applications  \n",
+       "2                    Advanced Vision and Imaging  \n",
+       "3         Natural Language Processing Techniques  \n",
+       "4         Natural Language Processing Techniques  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.chunk_store.head()"
+   ]
   }
  ],
  "metadata": {
