Half-arsed commit: Store and milvus store metadata saving

--- a/src/semantic_search/dev/embeddings.ipynb
+++ b/src/semantic_search/dev/embeddings.ipynb
@@ -87,22 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "(True, True)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds.check_server_health()"
+    "ds.check_server_health(), ds.load_store()"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "if not ds.load_store():\n",
-    "    ds.create_index_from_df(ref_df.rename(columns={'oaid': 'id', 'abstract': 'text'}), overwrite=True)"
+    "#    ds.create_index_from_df(ref_df.rename(columns={'oaid': 'id', 'abstract': 'text'}), overwrite=True)"
    ]
   },
   {
